<resources>
    <string name="app_name">exercise_14_android_introduction_to_jetpack_component_part_2</string>

    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="delete_message">records are deleted successfully.</string>
    <string name="update_message">records are Updated successfully.</string>
    <string name="item_error_message">Please enter mandatory fields</string>
    <string name="insert_message">records are inserted successfully.</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="user_name">User Name*</string>
    <string name="user_emailId">User EmailID*</string>
    <string name="phone_number">Phone Number*</string>
    <string name="address">Address*</string>
    <string name="cancel">Cancel</string>
    <string name="update_add">Update or Add</string>
    <string name="question_1"><![CDATA[1.Create Application using recycler view, fragments and data binding to show a list of user with name, Email,Phone Number etc with Some data. Click on floating action button should show a fragment to add user details -> Clicking on save should insert in DB (use live data to get the list of users and be observed by the view).]]></string>
    <string name="question1_btn_txt">Question 1</string>
    <string name="viewModel_scoping">2. ViewModelScoping</string>
    <string name="question_2_btn_txt">Question 2</string>
    <string name="color_name">Color_name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>

</resources>
