<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".first_question.AddUserUpdate">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/title"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:hint="@string/user_name"
        android:inputType="text"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:hint="@string/user_emailId"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        android:textSize="20sp"
        android:textStyle="italic" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/address"
        android:layout_margin="10dp"
        android:background="#0003DAC5"
        android:elevation="50dp"
        android:gravity="center"
        android:padding="10dp"
        android:src="@android:drawable/ic_delete"
        android:textSize="15sp"
        android:tooltipText="@string/cancel"
        tools:targetApi="o" />

    <ImageButton
        android:id="@+id/add_update"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/address"
        android:layout_margin="10dp"
        android:layout_toEndOf="@+id/delete"
        android:background="#0003DAC5"
        android:elevation="50dp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:padding="10dp"
        android:src="@drawable/tick"
        android:textSize="15sp"
        android:tooltipText="@string/update_add"
        tools:targetApi="o" />

</RelativeLayout>
